Package refactoring